--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SquashTrainer</string>
 
-    <string name="dummy_button">Dummy Button</string>
+    <string name="start_button">Start</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
